[package]
name = "chat"
version = "0.1.0"
authors = ["David Tang <dtangster@yahoo.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = "0.8.2"
actix-web = "1.0.0"
actix-web-actors = "1.0.0"
actix-files = "0.1.1"
byteorder = "1.1"
bytes = "0.4"
env_logger = "0.6"
futures = "0.1.25"
names = "0.10.0"
rand = "0.6"
serde = "1.0"
serde_json = "1.0"
tokio-io = "0.1"
