[package]
name = "cache-layer"
version = "0.1.0"
authors = ["David Tang <dtang@egnyte.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3"
redis = "0.13.0"
rusqlite = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
